crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_metadata_sql_text_search_question.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 796,
    "question": "Two lines intersect, and angle 2 measures \\(40^\\circ\\). What is the measure of angle 3?",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 5.071
  },
  {
    "id": 404,
    "question": "Given that \\( \\angle BAC = 110^\\circ \\), find \\( x \\) if \\( x \\) is the measure of \\( \\angle BAC \\).",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 5.071
  },
  {
    "id": 506,
    "question": "If \\(\\angle 5\\) and \\(\\angle 4\\) are congruent and equal, does this prove that lines \\( o \\) and \\( p \\) are parallel?",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 4.648
  },
  {
    "id": 77,
    "question": "Convert the angle θ = π radians into degree measure.",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 4.494
  }
]
