crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_metadata_sql_text_search_subject_filter_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, question, trunc(_score, 3) FROM text_search(qs, 'angles', question) where subject='math' order by _score desc LIMIT 4"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                  |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: text_search(qs, Utf8("angles"), question).id, text_search(qs, Utf8("angles"), question).question, trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3))                                                        |
|               |   Sort: text_search(qs, Utf8("angles"), question)._score DESC NULLS FIRST, fetch=4                                                                                                                                                    |
|               |     Projection: text_search(qs, Utf8("angles"), question).id, text_search(qs, Utf8("angles"), question).question, trunc(text_search(qs, Utf8("angles"), question)._score, Int64(3)), text_search(qs, Utf8("angles"), question)._score |
|               |       TableScan: text_search(qs, Utf8("angles"), question) projection=[_score, id, question], full_filters=[text_search(qs, Utf8("angles"), question).subject = Utf8("math")]                                                         |
| physical_plan | ProjectionExec: expr=[id@0 as id, question@1 as question, trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3))@2 as trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3))]                                     |
|               |   SortPreservingMergeExec: [_score@3 DESC], fetch=4                                                                                                                                                                                   |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC], preserve_partitioning=[true]                                                                                                                                                       |
|               |       ProjectionExec: expr=[id@0 as id, question@1 as question, trunc(_score@2, 3) as trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3)), _score@2 as _score]                                                           |
|               |         FilterExec: subject@2 = math, projection=[id@0, question@1, _score@3]                                                                                                                                                         |
|               |           BytesProcessedExec                                                                                                                                                                                                          |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                      |
|               |               FullTextSearchTableExec q=angles                                                                                                                                                                                        |
|               |                                                                                                                                                                                                                                       |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
