crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_metadata_sql_text_search_subject_projection.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 495,
    "subject": "math",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 4.934
  },
  {
    "id": 494,
    "subject": "math",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 4.934
  },
  {
    "id": 499,
    "subject": "math",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 4.244
  },
  {
    "id": 1175,
    "subject": "math",
    "trunc(text_search(qs, Utf8(\"angles\"), question)._score,Int64(3))": 4.129
  }
]
