crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_metadata_sql_text_search_subject_projection_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, subject, trunc(_score, 3) FROM text_search(qs, 'angles', question) order by _score desc LIMIT 4"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                 |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: text_search(qs, Utf8("angles"), question).id, text_search(qs, Utf8("angles"), question).subject, trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3))                                                        |
|               |   Sort: text_search(qs, Utf8("angles"), question)._score DESC NULLS FIRST, fetch=4                                                                                                                                                   |
|               |     Projection: text_search(qs, Utf8("angles"), question).id, text_search(qs, Utf8("angles"), question).subject, trunc(text_search(qs, Utf8("angles"), question)._score, Int64(3)), text_search(qs, Utf8("angles"), question)._score |
|               |       TableScan: text_search(qs, Utf8("angles"), question) projection=[_score, id, subject]                                                                                                                                          |
| physical_plan | ProjectionExec: expr=[id@0 as id, subject@1 as subject, trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3))@2 as trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3))]                                      |
|               |   SortExec: TopK(fetch=4), expr=[_score@3 DESC], preserve_partitioning=[false]                                                                                                                                                       |
|               |     CoalescePartitionsExec                                                                                                                                                                                                           |
|               |       ProjectionExec: expr=[id@0 as id, subject@1 as subject, trunc(_score@2, 3) as trunc(text_search(qs, Utf8("angles"), question)._score,Int64(3)), _score@2 as _score]                                                            |
|               |         CooperativeExec                                                                                                                                                                                                              |
|               |           BytesProcessedExec                                                                                                                                                                                                         |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                     |
|               |               FullTextSearchTableExec q=angles                                                                                                                                                                                       |
|               |                                                                                                                                                                                                                                      |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
