crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_sql_text_search_basic.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
snapshot_kind: text
---
[
  {
    "i_item_sk": 5,
    "i_item_desc": "Passengers want etc in a walls. Important years must benefit clear by a ideas; hot children must avoid. Major, bad pounds rise on the needs. Farms may not see bright lines. Differ",
    "trunc(text_search().score,Int64(3))": 1.288
  },
  {
    "i_item_sk": 6,
    "i_item_desc": "Passengers want etc in a walls. Important years must benefit clear by a ideas; hot children must avoid. Major, bad pounds rise on the needs. Farms may not see bright lines. Differ",
    "trunc(text_search().score,Int64(3))": 1.288
  },
  {
    "i_item_sk": 4,
    "i_item_desc": "Passengers want etc in a walls. Important years must benefit clear by a ideas; hot children must avoid. Major, bad pounds rise on the needs. Farms may not see bright lines. Differ",
    "trunc(text_search().score,Int64(3))": 1.288
  }
]
