crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_sql_text_search_no_score.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
snapshot_kind: text
---
[
  {
    "i_color": "pink"
  },
  {
    "i_color": "moccasin"
  },
  {
    "i_color": "red"
  }
]
